--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 MERCADOPAGO_ACCESS_TOKEN=your_access_token_here
 BASE_URL_FRONT=http://localhost:3000
 BASE_URL_BACK=http://localhost:3001
+DB_HOST=example
+DB_PORT=example
+DB_USER=example
+DB_PASS=example
+DB_NAME=example
